Fix psycopg v3 driver, UUID/enum compat for Postgres + SQLite

--- a/alembic.ini
+++ b/alembic.ini
@@ -1,6 +1,6 @@
 [alembic]
 script_location = alembic
-sqlalchemy.url = postgresql://signalos:signalos@localhost:5432/signal_os
+sqlalchemy.url = postgresql+psycopg://signalos:signalos@localhost:5432/signal_os
 
 [loggers]
 keys = root,sqlalchemy,alembic
